--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
+    "fuse.js": "^6.4.3",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
